<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sunragav.home24.presentation.viewmodels.ArticlesViewModel" />
        <variable
            name="clickListener"
            type="com.sunragav.home24.feature_selection.views.listeners.ClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/viewpager_bg_color"
        tools:context="com.sunragav.home24.feature_selection.views.SelectionFragment">

        <LinearLayout
            android:id="@+id/ll_dialog"
            android:layout_width="@dimen/dlg_width"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_content"
            android:layout_marginStart="@dimen/dlg_margin"
            android:layout_marginTop="@dimen/dlg_margin"
            android:layout_marginEnd="@dimen/dlg_margin"
            android:orientation="vertical"
            android:visibility="@{viewModel.isReadyToReview().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="3dp">
            <ImageView
                android:src="@drawable/ic_star"
                android:layout_gravity="center"
                android:contentDescription="@string/ready_for_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/congrats"
                android:textColor="@color/dlg_content_bg"
                android:textSize="@dimen/dlg_title_text_size"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:id="@+id/view"
                android:layout_margin="@dimen/dlg_title_content_divider_margin"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/dlg_divider_color" />
            <TextView
                android:text="@string/goto_review_dlg_content"
                android:textColor="@color/dlg_content_text_color"
                android:textSize="@dimen/dlg_content_text_size"
                android:layout_margin="@dimen/dlg_content_margin"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_dialog_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/dialog"
            android:visibility="@{viewModel.isReadyToReview().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp"/>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_articles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{!viewModel.isLoading().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >


        </androidx.viewpager2.widget.ViewPager2>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vp_articles"
            app:layout_constraintTop_toTopOf="@+id/vp_articles" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_undo"
            android:layout_width="@dimen/like_button_size"
            android:layout_height="@dimen/like_button_size"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableStart="@drawable/ic_undo"
            android:onClick="@{clickListener::onUndo}"
            android:visibility="@{viewModel.isUndoShowable().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/like_button_size"
            android:text="@string/empty_content"
            android:visibility="@{viewModel.isLoading().booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bottom_pane"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_pane_height"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_cv_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/skyBlue">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_like"
                    android:layout_width="@dimen/like_button_size"
                    android:layout_height="@dimen/like_button_size"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{clickListener::onLiked}"
                    android:visibility="@{!viewModel.isReadyToReview().booleanValue()}"
                    android:background="?selectableItemBackgroundBorderless"
                    android:drawableStart="@drawable/ic_like_heart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_dislike"
                    android:layout_width="@dimen/like_button_size"
                    android:layout_height="@dimen/like_button_size"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{clickListener::onDisliked}"
                    android:visibility="@{!viewModel.isReadyToReview().booleanValue()}"
                    android:background="?selectableItemBackgroundBorderless"
                    android:drawableStart="@drawable/ic_dislike"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_review"
                    android:layout_width="@dimen/card_view_review_count_width"
                    android:layout_height="@dimen/like_button_size"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="@dimen/card_view_elevation"
                    app:cardCornerRadius="@dimen/card_view_radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_like"
                    app:layout_constraintStart_toEndOf="@+id/btn_dislike"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_review"
                        android:layout_width="@dimen/like_button_size"
                        android:layout_height="@dimen/like_button_size"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:background="?selectableItemBackgroundBorderless"
                        android:drawableStart="@drawable/ic_star"
                        android:onClick="@{clickListener::onReview}"
                        android:visibility="@{viewModel.isReadyToReview.booleanValue()}"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_like_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:width="@dimen/like_button_size"
                        android:height="@dimen/like_button_size"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@{viewModel.reviewText}"
                        android:visibility="@{!viewModel.isReadyToReview}"
                        tools:text="2/10" />
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
